--- a/quotes.html
+++ b/quotes.html
@@ -54,5 +54,9 @@
     <p>"When you have to shoot, shoot.  Don't talk."</p>
     <p>In the movie, The Good, The Bad, and The Ugly, the character Tuco Ramirez brother of bBrother Ramirez finds himself in a bombed out building, but there is a bathtub with water in it.  So he decides to take a bath.  While he is in the bath, a gunslinger from his past visits him and begins a soliloquy about how he has dreamt of killing Tuco.  Just at the end of the man's speech, Tuco shoots him dead and tells him the above quote.</p>
 </div>
-</body>
+<div class="quote7">
+    <h2>Quote # 7</h2>
+    <p>If you were your own employer, would you be entirely satisfied with the day's work you have done today?</p>
+    <p>When you finished your job today, or the last day you worked, did you give it your all?  Or did you leave some gas in the tank?  Would you want you to come back to work if you were your boss, or coworker?</p>
+</div></body>
 </html>
