--- a/quotes.html
+++ b/quotes.html
@@ -52,7 +52,7 @@
 <div class="quote6">
     <h2>Quote # 6</h2>
     <p>"When you have to shoot, shoot.  Don't talk."</p>
-    <p>In the movie, The Good, The Bad, and The Ugly, the character Tuco Ramirez brother of bBrother Ramirez finds himself in a bombed out building, but there is a bathtub with water in it.  So he decides to take a bath.  While he is in the bath, a gunslinger from his past visits him and begins a soliloquy about how he has dreamt of killing Tuco.  Just at the end of the man's speech, Tuco shoots him dead and tells him the above quote.</p>
+    <p>In the movie, The Good, The Bad, and The Ugly, the character Tuco Ramirez brother of Brother Ramirez finds himself in a bombed out building, but there is a bathtub with water in it.  So he decides to take a bath.  While he is in the bath, a gunslinger from his past visits him and begins a soliloquy about how he has dreamt of killing Tuco.  Just at the end of the man's speech, Tuco shoots him dead and tells him the above quote.</p>
 </div>
 <div class="quote7">
     <h2>Quote # 7</h2>
