added some notes to work history

--- a/work_history.html
+++ b/work_history.html
@@ -9,6 +9,14 @@
     <link href="css/work-history.css" rel="stylesheet">
 </head>
 <body class="work">
+<!--<div class="container-fluid">-->
+<!--    <div id="dover" class="border: 2px solid black">-->
+<!--        <h2 class="text1">Dover Air And Space Museum</h2>-->
+<!--        <p class="year text2">2025 - Present</p>-->
+<!--        <p class="location text2">Dover Air Force Base, Dover, Delaware</p>-->
+<!--        <p id="vidd" class="text3">Volunteer Tour Guide</p>-->
+<!--        <p id="vidt" class="text3">I give tours of aircraft from the history of the United States Air Force</p>-->
+<!--    </div>-->
 <div class="container-fluid">
     <div id="vetInd" class="border: 2px solid black">
         <h2 class="text1">Veteran Industries</h2>
