--- a/work_history.html
+++ b/work_history.html
@@ -9,25 +9,27 @@
     <link href="css/work-history.css" rel="stylesheet">
 </head>
 <body class="work">
-<!--<div class="container-fluid">-->
-<!--    <div id="dover" class="border: 2px solid black">-->
-<!--        <h2 class="text1">Dover Air And Space Museum</h2>-->
-<!--        <p class="year text2">2025 - Present</p>-->
-<!--        <p class="location text2">Dover Air Force Base, Dover, Delaware</p>-->
-<!--        <p id="vidd" class="text3">Volunteer Tour Guide</p>-->
-<!--        <p id="vidt" class="text3">I give tours of aircraft from the history of the United States Air Force</p>-->
-<!--    </div>-->
 <div class="container-fluid">
+    <div id="dover" class="border: 2px solid black">
+        <h2 class="text1 dover">Air Mobility Command Museum</h2>
+        <p class="year text2">2025 - Present</p>
+        <p class="location text2">Dover Air Force Base, Dover, Delaware</p>
+        <p id="amcm" class="text3">Volunteer Tour Guide</p>
+        <!--        <p id="amcm" class="text3">I give tours of aircraft from the history of the United States Air Force</p>-->
+    </div>
     <div id="vetInd" class="border: 2px solid black">
         <h2 class="text1">Veteran Industries</h2>
         <p class="year text2">2018 - 2019</p>
         <p class="location text2">Coatesville, Pennsylvania</p>
         <p id="vidd" class="text3">Computer Room Assistant</p>
-        <p id="vidt" class="text3">This business is a government program located at the Coatesville VA Medical Center. It is designed to assist
+        <p id="vidt" class="text3">This business is a government program located at the Coatesville VA Medical
+            Center. It is designed to assist
             veterans
-            find employment, housing and apply for benefits they may qualify for. I was employed in the Computer Room
+            find employment, housing and apply for benefits they may qualify for. I was employed in the Computer
+            Room
             and I
-            oversaw the daily performance of computer systems and set up equipment, such as computers or other media for
+            oversaw the daily performance of computer systems and set up equipment, such as computers or other media
+            for
             veterans to use. I performed and ensured proper installation of appropriate software. I installed, and
             performed
             minor repairs to hardware, software and peripheral equipment, following design and installation
@@ -41,7 +43,8 @@
         <p class="year text2">2015 - 2018</p>
         <p class="location text2">New Jersey/Pennsylvania/Delaware/New York</p>
         <p id="uberdd" class="text3">Driver/Partner</p>
-        <p id="ubertt" class="text3">I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
+        <p id="ubertt" class="text3">I executed daily operations of vehicle safety inspections, cleaning and
+            servicing of my vehicle with
             cleaners,
             fuel,
             lubricants and accessories. I assisted disabled passengers into and out of my vehicle. Operated phone
@@ -55,7 +58,8 @@
         <p class="year text2">2017 - 2018</p>
         <p class="location text2">New Jersey/Pennsylvania/Delaware/New York</p>
         <p id="lydd" class="text3">Driver/Partner</p>
-        <p id="lyftt" class="text3">I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
+        <p id="lyftt" class="text3">I executed daily operations of vehicle safety inspections, cleaning and
+            servicing of my vehicle with
             cleaners,
             fuel,
             lubricants and accessories. I assisted disabled passengers into and out of my vehicle. Operated phone
@@ -69,17 +73,22 @@
         <p class="year text2">2003 - 2012</p>
         <p class="location text2">Joint Base McGuire/Dix/Lakehurst, New Jersey</p>
         <p id="njang" class="text3">General Aircraft Mechanic</p>
-        <p id="njangt" class="text3">In 2003, I moved to New Jersey where I was trained as an aircraft mechanic on KC-135E/R Stratotanker
+        <p id="njangt" class="text3">In 2003, I moved to New Jersey where I was trained as an aircraft mechanic on
+            KC-135E/R Stratotanker
             refueling
-            airplanes. While at McGuire (later renamed Joint Base McGuire/Fort Dix/Lakehurst), I was trained to repair, service and refuel aircraft. I was trained on powered
+            airplanes. While at McGuire (later renamed Joint Base McGuire/Fort Dix/Lakehurst), I was trained to
+            repair, service and refuel aircraft. I was trained on powered
             and
             non-powered support equipment such as generators, air conditioning units, gaseous oxygen servicing
             equipment,
-            hydraulic pressure systems, platform loading/unloading equipment, roller systems to move pallets onto and off of the airplane, fork lifts, deicing trucks and snow
+            hydraulic pressure systems, platform loading/unloading equipment, roller systems to move pallets onto
+            and off of the airplane, fork lifts, deicing trucks and snow
             removal
-            equipment. For a period of time I was the Vehicle Control Non-Commissioned Officer, Tool Room Supervisor and
+            equipment. For a period of time I was the Vehicle Control Non-Commissioned Officer, Tool Room Supervisor
+            and
             the
-            Trainer/Certifier for the deicer trucks. In 2012, I retired from the military after 23 years of service and
+            Trainer/Certifier for the deicer trucks. In 2012, I retired from the military after 23 years of service
+            and
             received
             an Honorable Discharge.</p>
     </div>
@@ -90,7 +99,8 @@
         <p id="cangdd" class="text3">Vehicle Mechanic/Secure Communications</p>
         <p id="cangt" class="text3">At the end of 1999, I moved to San Diego where I was going to
             continue
-            service in the Nevada Air National Guard. I discovered there was an Air National Guard Station near my home,
+            service in the Nevada Air National Guard. I discovered there was an Air National Guard Station near my
+            home,
             so
             I transferred to the California Air National Guard. I applied for and was accepted in to Secure
             Communications
@@ -98,10 +108,12 @@
             superintendent of the motor pool learned that I was a Former Marine with
             vehicle maintenance experience, and he recruited me to apply for a full-time position that was currently
             available. After
-            the application process, I was hired as the full-time mechanic. At one point, the dispatcher remarked to me
+            the application process, I was hired as the full-time mechanic. At one point, the dispatcher remarked to
+            me
             as I
             was
-            turning in paperwork that I was completing the work too fast, and I was going to work myself out of a job.
+            turning in paperwork that I was completing the work too fast, and I was going to work myself out of a
+            job.
             In
             October 2002,
             my position was dissolved.</p>
@@ -112,7 +124,8 @@
         <p class="location text2">Reno, Nevada</p>
         <p id="angdd" class="text3">Aerial Port</p>
         <p id="angt" class="text3"> In September 1997, I joined the Air National Guard located at the Reno
-            International Airport. The Aerial Port handles all manner of duties associated with air travel. Most of the
+            International Airport. The Aerial Port handles all manner of duties associated with air travel. Most of
+            the
             positions you see at the airport are handled by Aerial Port i.e. Passenger Service, Food Service/Crew &
             Passenger
             Meals,
@@ -122,7 +135,11 @@
             used sandbags that simulated personnel and pallets of different weights that simulated different
             configurations
             of
-            cargo to be dropped. When the mission is dropping pallets, someone has to be at the drop location to pick up the pallets, load them on a truck and drive them back to the base.  I operated both equipment (forklifts) to pick up the pallets and load them on the 40' trailer, and the tractor trailer to haul the pallets back to the base.  In my position, I operated loaders (flat topped vehicles with a driver cab) used to
+            cargo to be dropped. When the mission is dropping pallets, someone has to be at the drop location to
+            pick up the pallets, load them on a truck and drive them back to the base. I operated both equipment
+            (forklifts) to pick up the pallets and load them on the 40' trailer, and the tractor trailer to haul the
+            pallets back to the base. In my position, I operated loaders (flat topped vehicles with a driver cab)
+            used to
             load
             pallets onto aircraft, fork lifts of various sizes, tractor trailer with 40' flat bed used for return
             transportation
@@ -132,15 +149,31 @@
         <h2 id="atpt" class="text1">All Points Towing</h2>
         <p class="year text2">1996 - 1999</p>
         <p class="location text2">Reno, Nevada</p>
-        <p id="aptdd" class="text3">Tow Truck Operator, Night Tow Manager, Dispatcher, Vehicle Mechanic, Long Haul Specialist, Nationally Certified Tow Operator</p>
-        <p id="apttt" class="text3">I started with All Points Towing as a tow truck operator after speaking with the owner and asking him what he needed.  His reply was "Drivers!".  I worked the overnight shift and as my seniority grew, I eventually became the person other drivers would turn to for instructions or advise.  Over time, I acquired a knack for taking customers of AAA and All Points to their home cities instead of returning to Reno.  With my background as a mechanic, when the company needed someone to repair the trucks, I worked to keep the fleet on the road.  I assisted the dispatchers with coordinating drivers and connecting them with customers to keep the time spent on the side of the road to a minimum.  My experience as an operator helped me as I often put myself in the place of the operators on the road.  At one point, the opportunity arose to travel to Las Vegas to be tested as a Nationally Certified Tow Operator, I passed.</p>
+        <p id="aptdd" class="text3">Tow Truck Operator, Night Tow Manager, Dispatcher, Vehicle Mechanic, Long Haul
+            Specialist, Nationally Certified Tow Operator</p>
+        <p id="apttt" class="text3">I started with All Points Towing as a tow truck operator after speaking with the
+            owner and asking him what he needed. His reply was "Drivers!". I worked the overnight shift and as my
+            seniority grew, I eventually became the person other drivers would turn to for instructions or advise.
+            Over time, I acquired a knack for taking customers of AAA and All Points to their home cities instead of
+            returning to Reno. With my background as a mechanic, when the company needed someone to repair the
+            trucks, I worked to keep the fleet on the road. I assisted the dispatchers with coordinating drivers and
+            connecting them with customers to keep the time spent on the side of the road to a minimum. My
+            experience as an operator helped me as I often put myself in the place of the operators on the road. At
+            one point, the opportunity arose to travel to Las Vegas to be tested as a Nationally Certified Tow
+            Operator, I passed.</p>
     </div>
     <div class=" border: 2px solid black bg-danger">
         <h2 class="text1">United States Marine Corps/Marine Corps Reserves</h2>
         <p class="year text2">1987 - 1995</p>
         <p class="location text2">Various Locations</p>
-        <p id="mcdd" class="text3">Basic Rifleman, Vehicle Mechanic, Wrecker Operator, Vehicle Driver, F/A - 18 Hornet Aircraft Mechanic</p>
-        <p id="mctt" class="text3">I joined the United States Marine Corps on January 15, 1987, in the delayed entry program.  I left for boot camp on May 26 and began my military career.  Throughout my Marine Corps career, I was a Vehicle Mechanic, M-936 Wrecker Operator, and an F-18A Hornet General Aviation Mechanic. I also held an over-the-road driver's license for all the equipment I worked on.  Among other locations, I served at Marine Corps Base Camp LeJeune, Camp Johnson, NAS/MCAS Miramar, Camp Pendleton, and 29 Palms.</p>
+        <p id="mcdd" class="text3">Basic Rifleman, Vehicle Mechanic, Wrecker Operator, Vehicle Driver, F/A - 18
+            Hornet Aircraft Mechanic</p>
+        <p id="mctt" class="text3">I joined the United States Marine Corps on January 15, 1987, in the delayed entry
+            program. I left for boot camp on May 26 and began my military career. Throughout my Marine Corps career,
+            I was a Vehicle Mechanic, M-936 Wrecker Operator, and an F-18A Hornet General Aviation Mechanic. I also
+            held an over-the-road driver's license for all the equipment I worked on. Among other locations, I
+            served at Marine Corps Base Camp LeJeune, Camp Johnson, NAS/MCAS Miramar, Camp Pendleton, and 29
+            Palms.</p>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
