edited images for VetTix

--- a/work_history.html
+++ b/work_history.html
@@ -15,7 +15,7 @@
         <p class="year text2">2025 - Present</p>
         <p class="location text2">Dover Air Force Base, Dover, Delaware</p>
         <p id="amcm" class="text3">Volunteer Tour Guide</p>
-        <!--        <p id="amcm" class="text3">I give tours of aircraft from the history of the United States Air Force</p>-->
+        <p id="amcmp" class="text3">I give tours of aircraft from the history of the United States Air Force, including a KC-135E Stratotanker that I worked on while I was in the Air National Guard.  Additional aircraft include, but are not limited to, a C-47A which was used in the D-Day Invasion, the first (and ONLY) C-5A Galaxy to drop an Inter Continental Ballistic Missile (ICBM), the first C-141A Starlifter (the very first C-141 built), the first KC-10A Extender delivered to the Air Force, among other aircraft.</p>
     </div>
     <div id="vetInd" class="border: 2px solid black">
         <h2 class="text1">Veteran Industries</h2>
