--- a/aircraft.html
+++ b/aircraft.html
@@ -27,16 +27,17 @@
     </div>
     <div class="container-fluid">
         <h1>SECTION II</h1>
+        <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a  class="navbar-brand logo-font" href="/static">Air Traffic Control Tower</a>
         <a class="navbar-brand logo-font" href="/static">Douglas C-47A "Skytrain" 42-92841</a>
         <a class="navbar-brand logo-font" href="/static">Douglas A-26C "Invader" 44-35523 (N3428G)</a>
         <a class="navbar-brand logo-font" href="/static">Boeing B-17G "Flying Fortress" 44-83624</a>
-        <a class="navbar-brand logo-font" href="/static">Lockheed C-5A "Galaxy" 69-0014</a>
+        <img alt="C-5A 'Galaxy'" src="Images/C-5A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-5A "Galaxy" 69-0014</a>
         <a class="navbar-brand logo-font" href="/static">LGM-30 Minuteman Missile</a>
         <a class="navbar-brand logo-font" href="/static">DeHavilland Canada C-7A "Caribou" 63-9760</a>
         <a class="navbar-brand logo-font" href="/static">Douglas C-9A "Nightingale" 67-22584</a>
         <a class="navbar-brand logo-font" href="/static">Boeing C-17 "Globemaster III"</a>
         <a class="navbar-brand logo-font" href="/static">Beech C-45G "Expeditor"</a>
-        <a class="navbar-brand logo-font" href="/static">Curtiss C-46A "Commando" 43-47350</a>
+        <img alt="C-46A 'Commando'" src="Images/C-46A.jpg"/><a class="navbar-brand logo-font" href="/static">Curtiss C-46A "Commando" 43-47350</a>
         <a class="navbar-brand logo-font" href="/static">Douglas C-54M "Skymaster" 44-9030</a>
         <a class="navbar-brand logo-font" href="/static">Lockheed C-60A "Lodestar" 42-55918</a>
         <a class="navbar-brand logo-font" href="/static">Fairchild C-119C "Flying Boxcar" 48-0352</a>
@@ -47,7 +48,7 @@
         <a class="navbar-brand logo-font" href="/static">Lockheed C-130E "Hercules" 69-6580</a>
         <a class="navbar-brand logo-font" href="/static">Convair C-131D "Samaritan" 55-0295</a>
         <a class="navbar-brand logo-font" href="/static">Douglas C-133B "Cargomaster" 59-0536</a>
-        <a class="navbar-brand logo-font" href="/static">Lockheed C-141A "Starlifter" 61-2775</a>
+        <img alt="C-141A 'Starlifter'" src="Images/C-141A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-141A "Starlifter" 61-2775</a>
         <a class="navbar-brand logo-font" href="/static">Lockheed C-141B "Starlifter" 64-0626</a>
         <a class="navbar-brand logo-font" href="/static">McDonnell F-101B "Voodoo" 59-0428</a>
         <a class="navbar-brand logo-font" href="/static">Convair F-106A "Delta Dart" 59-0023</a>
@@ -60,14 +61,14 @@
         <a class="navbar-brand logo-font" href="/static">Boeing KB-50J "Superfortress" 49-0389</a>
         <a class="navbar-brand logo-font" href="/static">KC-10A "Extender" 79-0433</a>
         <a class="navbar-brand logo-font" href="/static">KC-97L "Stratofreighter" 53-0230</a>
-        <a class="navbar-brand logo-font" href="/static">Boeing KC-135E "Stratotanker" 57-1507</a>
+        <img alt="KC-135E 'Stratotanker'" src="Images/KC-135E.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing KC-135E "Stratotanker" 57-1507</a>
         <a class="navbar-brand logo-font" href="/static">Vultee BT-13A "Valiant" 42-01639</a>
         <a class="navbar-brand logo-font" href="/static">Boeing PT-17 "Kaydet"</a>
         <a class="navbar-brand logo-font" href="/static">Lockheed T-33A "Shooting Star" 52-9497</a>
         <a class="navbar-brand logo-font" href="/static">Cessna T-37 "Tweet" 56-576</a>
         <a class="navbar-brand logo-font" href="/static">Cessna T-41 "Mescalero" 68-7895</a>
         <a class="navbar-brand logo-font" href="/static">Cessna U-3A "Blue Canoe" 58-2126</a>
-        <a class="navbar-brand logo-font" href="/static">Douglas VC-9C "Air Force Two, SAM 682" 73-1682</a>
+        <img alt="VC-9C 'Air Force Two" src="Images/VC-9C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas VC-9C "Air Force Two, SAM 682" 73-1682</a>
     </div>
     <div>
         <h1>SECTION III</h1>
