added AMCM page

--- a/aircraft.html
+++ b/aircraft.html
@@ -27,7 +27,7 @@
     </div>
     <div class="container-fluid">
         <h1>SECTION II</h1>
-        <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a  class="navbar-brand logo-font" href="/static">Air Traffic Control Tower</a>
+        <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a class="navbar-brand logo-font" href="tower.html">Air Traffic Control Tower</a>
         <a class="navbar-brand logo-font" href="/static">Douglas C-47A "Skytrain" 42-92841</a>
         <a class="navbar-brand logo-font" href="/static">Douglas A-26C "Invader" 44-35523 (N3428G)</a>
         <a class="navbar-brand logo-font" href="/static">Boeing B-17G "Flying Fortress" 44-83624</a>
