--- a/aircraft.html
+++ b/aircraft.html
@@ -31,7 +31,7 @@
         <img alt="A-26C" src="Images/A-26C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas A-26C "Invader" 44-35523 (N3428G)</a>
         <a class="navbar-brand logo-font" href="/static">Boeing B-17G "Flying Fortress" 44-83624</a>
         <img alt="C-5A 'Galaxy'" src="Images/C-5A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-5A "Galaxy" 69-0014</a>
-        <a class="navbar-brand logo-font" href="/static">LGM-30 Minuteman Missile</a>
+        <a class="navbar-brand logo-font" href="galaxy.html">LGM-30 Minuteman Missile</a>
         <a class="navbar-brand logo-font" href="/static">DeHavilland Canada C-7A "Caribou" 63-9760</a>
         <img alt="C-9" src="Images/C-9A - C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-9A "Nightingale" 67-22584</a>
         <img alt="C-17" src="Images/C-17.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing C-17 "Globemaster III"</a>
