updated AMCM page

--- a/aircraft.html
+++ b/aircraft.html
@@ -60,13 +60,13 @@
         <img alt="KB-50J" src="Images/KB-50.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing KB-50J "Superfortress" 49-0389</a>
         <img alt="KC-10A" src="Images/KC-10.jpg"/><a class="navbar-brand logo-font" href="/static">KC-10A "Extender" 79-0433</a>
         <img alt="KC-97L" src="Images/KC-97.jpg"/><a class="navbar-brand logo-font" href="/static">KC-97L "Stratofreighter" 53-0230</a>
-        <img alt="KC-135E 'Stratotanker'" src="Images/KC-135E.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing KC-135E "Stratotanker" 57-1507</a>
+        <img alt="KC-135E 'Stratotanker'" src="Images/KC-135E.jpg"/><a class="navbar-brand logo-font" href="tanker.html">Boeing KC-135E "Stratotanker" 57-1507</a>
         <a class="navbar-brand logo-font" href="/static">Vultee BT-13A "Valiant" 42-01639</a>
         <a class="navbar-brand logo-font" href="/static">Boeing PT-17 "Kaydet"</a>
         <a class="navbar-brand logo-font" href="/static">Lockheed T-33A "Shooting Star" 52-9497</a>
         <a class="navbar-brand logo-font" href="/static">Cessna T-37 "Tweet" 56-576</a>
         <a class="navbar-brand logo-font" href="/static">Cessna T-41 "Mescalero" 68-7895</a>
-        <a class="navbar-brand logo-font" href="/static">Cessna U-3A "Blue Canoe" 58-2126</a>
+        <img alt="U-3A" src="Images/U-3A.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna U-3A "Blue Canoe" 58-2126</a>
         <img alt="VC-9C 'Air Force Two" src="Images/VC-9C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas VC-9C "Air Force Two, SAM 682" 73-1682</a>
         <a class="navbar-brand logo-font" href="/static">Douglas Air-2 "Genie"</a>
     </div>
