updated AMCM page

--- a/galaxy.html
+++ b/galaxy.html
@@ -11,6 +11,13 @@
 </head>
 <body>
 <h1>C-5A Galaxy</h1>
+<h2>History</h2>
+<p>1. First factory new C-5A delivered to Dover AFB in August 1971, and the 45th built.</p>
+<p>2. October 1974 - First and ONLY aircraft to successfully air drop an ICBM.</p>
+<p>3. TF-39 GE engines used on A & B models were first High Bypass turbofan engines.</p>
+<p>4. October 2013 - Assigned to the AMC Museum.  First C-5 retired to a museum for public viewing.</p>
+<p>5. Only C-5 painted in the original 1970's era Gray & White paint scheme.</p>
+<p>6. 70,000 pounds of concrete on-board the plane behind the exhibit walls to help keep it on the ground.</p>
 <h3>Flight Deck</h3>
 <h4>Cockpit</h4>
 <p></p>
