--- a/aircraft.html
+++ b/aircraft.html
@@ -30,7 +30,7 @@
         <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a class="navbar-brand logo-font" href="tower.html">Air Traffic Control Tower</a>
         <img alt="A-26C" src="Images/A-26C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas A-26C "Invader" 44-35523 (N3428G)</a>
         <a class="navbar-brand logo-font" href="/static">Boeing B-17G "Flying Fortress" 44-83624</a>
-        <img alt="C-5A 'Galaxy'" src="Images/C-5A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-5A "Galaxy" 69-0014</a>
+        <img alt="C-5A 'Galaxy'" src="Images/C-5A.jpg"/><a class="navbar-brand logo-font" href="galaxy.html">Lockheed C-5A "Galaxy" 69-0014</a>
         <a class="navbar-brand logo-font" href="galaxy.html">LGM-30 Minuteman Missile</a>
         <a class="navbar-brand logo-font" href="/static">DeHavilland Canada C-7A "Caribou" 63-9760</a>
         <img alt="C-9" src="Images/C-9A - C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-9A "Nightingale" 67-22584</a>
@@ -56,7 +56,7 @@
         <a class="navbar-brand logo-font" href="/static">Waco CG-4A "Hadrian" 45-15009</a>
         <a class="navbar-brand logo-font" href="/static">Laister-Kauffman TG-4A "Angel Eyes, Yankee Doodle" 42-53078</a>
         <a class="navbar-brand logo-font" href="/static">Bell UH-1H "Iroquois aka Huey" 69-15475</a>
-        <a class="navbar-brand logo-font" href="/static">Kaman HH-43B "Huskie" 62-4532</a>
+        <img alt="HH-43B" src="Images/HH-43B.jpg" height="2236" width="1882"/><a class="navbar-brand logo-font" href="/static">Kaman HH-43B "Huskie" 62-4532</a>
         <img alt="KB-50J" src="Images/KB-50.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing KB-50J "Superfortress" 49-0389</a>
         <img alt="KC-10A" src="Images/KC-10.jpg"/><a class="navbar-brand logo-font" href="/static">KC-10A "Extender" 79-0433</a>
         <img alt="KC-97L" src="Images/KC-97.jpg"/><a class="navbar-brand logo-font" href="/static">KC-97L "Stratofreighter" 53-0230</a>
