updated AMCM page

--- a/aircraft.html
+++ b/aircraft.html
@@ -24,9 +24,19 @@
     </div>
     <div>
         <h1>SECTION I</h1>
+        <h2>Opening Statement</h2>
+        <h2>Museum Summary</h2>
+        <h2>Museum Overview</h2>
+        <h2>General Information</h2>
+        <h2>Museum Mission Statement</h2>
+        <h2>Collection Policy</h2>
+        <h2>Significant Dates in Base History</h2>
+        <h2>History of Dover Air Force Base</h2>
+        <h2>Aircraft Assigned to Dover since 1941</h2>
     </div>
     <div class="container-fluid">
         <h1>SECTION II</h1>
+        <h2>First, Last and Only</h2>
         <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a class="navbar-brand logo-font" href="tower.html">Air Traffic Control Tower</a>
         <img alt="A-26C" src="Images/A-26C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas A-26C "Invader" 44-35523 (N3428G)</a>
         <a class="navbar-brand logo-font" href="/static">Boeing B-17G "Flying Fortress" 44-83624</a>
@@ -72,6 +82,23 @@
     </div>
     <div>
         <h1>SECTION III</h1>
+        <h3>F-106 Flight Simulator</h3>
+        <h3>Link Trainer</h3>
+        <h3>V-1710 & V-1650 Engines</h3>
+        <h3>Cargo Compartments</h3>
+        <h3>AN/GPN20 - OD-153/T Radar</h3>
+        <h3>The Rocketeers</h3>
+        <h3>95th & 98th Fighter Interceptor Squadrons</h3>
+        <h3>Clark CA-1 Airborne Bulldozer</h3>
+        <h3>Case SI Airborne Tractor</h3>
+        <h3>Converto 1/2 ton Dumping Trailer</h3>
+        <h3>1972 Ford Staff Car</h3>
+        <h3>1956 IHC Fire Truck</h3>
+        <h3>AZP S-60 Anti-Aircraft Artillery</h3>
+        <h3>Building 1301 Home of the Rocket Text Center</h3>
+        <h3>Building 1304 Restoration Hangar</h3>
+        <h3>Commemoration Park</h3>
+        <h3>9/11 Memorial</h3>
     </div>
 </nav>
 <footer th:fragment="footer" class="footer-bg d-flex justify-content-between align-items-center mt-auto">
