updated AMCM page

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -41,6 +41,11 @@
     <hr>
     <section class="certs">
         <div class="card">
+            <div class="card-body"><a href="Images/1775-Club-Membership-Certificate.jpg"><img
+                    src="Images/1775-Club-Membership-Certificate.jpg"
+                    alt="freeCodeCamp Certificate of Completion - Responsive Web Design"></a></div>
+        </div>
+        <div class="card">
             <div class="card-body"><a href="Certificates/respwebdesign.html"><img
                     src="Images/FreeCodeCamp%20-%20Responsive%20Web%20Design%20Certificate.png"
                     alt="freeCodeCamp Certificate of Completion - Responsive Web Design"></a></div>
