--- a/galaxy.html
+++ b/galaxy.html
@@ -10,7 +10,7 @@
       <link href="css/galaxy.css" rel="stylesheet">
 </head>
 <body>
-<h1>C-5A Galaxy</h1>
+<h1 id="top">C-5A Galaxy</h1>
 <h2>History</h2>
 <p>1. First factory new C-5A delivered to Dover AFB in August 1971, and the 45th built.</p>
 <p>2. October 1974 - First and ONLY aircraft to successfully air drop an ICBM.</p>
@@ -31,7 +31,7 @@
 <p>The passenger area is located above the cargo deck aft of the wings.  It is accessed from the ladder in the roof above the rear ramp.  There are 75 seats of which, 3 are designated for crew members.  There is a galley which contains 2 refrigerators, and 2 ovens.  There is a lavatory located in the forward area of the passenger system.  The seats face to the rear in the unlikely event that the plane would crash.  The plane would most likely be moving forward and the passenger's back would be against the seat back.  It therefore would have less stress on the body and the passenger would have a higher chance of survival.</p>
 <h3>Cargo Deck</h3>
 <p>The cargo deck is the main mission for the C-5.  The cargo deck can fit 36 pallets of cargo or vehicles, aircraft and just about anything that can fit within the walls.  6 Greyhound style buses can fit on the cargo deck (2 columns of 3 rows). 7 intact UH-1 Huey's can fit, ready to fly so when the plane lands, they can be pre-flighted and take off immediately.</p>
-<!--<script src="Upcoming_Dates/functions.Upcoming_Dates"></script>-->
+<a href="#top" class="btn btn-primary">Back to Top</a>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
