--- a/aircraft.html
+++ b/aircraft.html
@@ -38,7 +38,7 @@
         <h1>SECTION II</h1>
         <h2>First, Last and Only</h2>
         <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a class="navbar-brand logo-font" href="tower.html">Air Traffic Control Tower</a>
-        <img alt="A-26C" src="Images/A-26C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas A-26C "Invader" 44-35523 (N3428G)</a>
+        <img alt="A-26C" src="Images/A-26C.jpg"/><a class="navbar-brand logo-font" href="a26c.html">Douglas A-26C "Invader" 44-35523 (N3428G)</a>
         <a class="navbar-brand logo-font" href="/static">Boeing B-17G "Flying Fortress" 44-83624</a>
         <img alt="C-5A 'Galaxy'" src="Images/C-5A.jpg"/><a class="navbar-brand logo-font" href="galaxy.html">Lockheed C-5A "Galaxy" 69-0014</a>
         <a class="navbar-brand logo-font" href="galaxy.html">LGM-30 Minuteman Missile</a>
@@ -46,7 +46,7 @@
         <img alt="C-9" src="Images/C-9A - C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-9A "Nightingale" 67-22584</a>
         <img alt="C-17" src="Images/C-17.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing C-17 "Globemaster III"</a>
         <a class="navbar-brand logo-font" href="/static">Beech C-45G "Expeditor"</a>
-        <img alt="C-46A 'Commando'" src="Images/C-46A.jpg"/><a class="navbar-brand logo-font" href="/static">Curtiss C-46A "Commando" 43-47350</a>
+        <img alt="C-46A 'Commando'" src="Images/C-46A.jpg"/><a class="navbar-brand logo-font" href="commando.html">Curtiss C-46A "Commando" 43-47350</a>
         <a class="navbar-brand logo-font" href="/static">Douglas C-47A "Skytrain" 42-92841</a>
         <a class="navbar-brand logo-font" href="/static">Douglas C-54M "Skymaster" 44-9030</a>
         <a class="navbar-brand logo-font" href="/static">Lockheed C-60A "Lodestar" 42-55918</a>
