--- a/tower.html
+++ b/tower.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    <h1>Air Traffic Control Tower</h1>
+    <h1 id="top">Air Traffic Control Tower</h1>
     <h2>Tower History</h2>
     <p>Built 1941 - 1942</p>
     <p>Original Height - 83 feet and all the steps were as steep as the last 12 are today.</p>
@@ -122,6 +122,7 @@
     <img alt="Lowering the tower cap onto the base" src="Images/Tower5.jpg" height="2764" width="2075"/>
     <p>Lowering the tower cap onto the current base.</p>
 </div>
+<a href="#top" class="btn btn-primary mt-3">Back to Top</a>
 <footer th:fragment="footer" class="footer-bg d-flex justify-content-between align-items-center mt-auto">
 </footer>
 <div th:fragment="boot-scripts">
