--- a/firstlastonly.html
+++ b/firstlastonly.html
@@ -19,6 +19,30 @@
     <p>The First C-141A "Starlifter", Serial Number 61-2775, was the first of 284 C-141's.  It first flew on 17 December, 1963, 60 years to the day from the Wright Brothers' first flight.  It was the first jet aircraft specifically designed as a cargo plane.  It is one of only two remaining "A" models.  The only known 4 engine jet used to tow a glider.  Used during NASA testing of shuttle launch operations.</p>
     <h2>C-141B "Starlifter"</h2>
     <p>The last C-141B "Starlifter", Serial Number 64-0626, assigned to Dover AFB.  The last C-141 to be transferred to another base when Dover AFB transitioned to all C-5 operations.</p>
+    <h2>C-9A "Nightingale"</h2>
+    <p>The First C-9A "Nightingale", Serial Number 67-22584 was the first C-9 accepted for the Military Airlift Command.  The C-9's were the first purpose built Medevac aircraft in the USAF.  This C-9 served for 37 years before being retired in 2005.</p>
+    <h2>VC-9C</h2>
+    <p>The First VC-9C configured to be Air Force Two, Serial Number 73-1682 was the first VC-9 configured with a special radio communications package so it could serve as Air Force One, although usually it served as AF Two or for transport of America's First Ladies and other dignitaries.  The last VIP to fly on this plane was Michelle Obama.</p>
+    <h2>C-133B "Cargomaster"</h2>
+    <p>The Last C-133B "Cargomaster" built, Serial Number 59-0536 was the last of 50 C-133's build in 1961 and retired in 1971 when it was replaced by the C-5.  It is the largest turbo-prop aircraft in the US powered by the largest turbo-prop engines ever built, the Pratt & Whitney T-34.</p>
+    <h2>B-17G "Flying Fortress"</h2>
+    <p>The Last B-17G "Flying Fortress" to drop bombs.  The last B-17 assigned to the 381st BG at Ridgewell AB in England.  While assigned to Eglin AFB in a test squadron in the late 1950's, it was used to drop bombs during public "Airpower" demonstrations to compare it with modern bombers.  It is also the only surviving veteran of the 1948 Flying Bomb Project (using remote controlled aircraft as flying bombs).</p>
+    <h2>KC-135E "Stratotanker"</h2>
+    <p>The First and Last KC-135E "Stratotanker", Serial Number 57-1507, was the first all jet tanker assigned to the ANG in April 1975.  While assigned to the 108th Air Refueling Wing, New Jersey ANG, it flew the last operational mission for any KC-135E on 14 July 2009.  The crew chief who called flight controls on that flight was one of our Tour Guides, SSgt. Ralph McCloskey.</p>
+    <h2>C-54M "Skymaster"</h2>
+    <p>The Only Surviving C-54M "Skymaster", Serial Number 44-9030, was one of 38 aircraft that was specially modified to haul coal during the Berlin Airlift.  It is the only remaining "M" model.  It served in the Pacific during World War II and was retired in 1973.  It then served as a ground trainer at the FBI training Academy in the Sky Marshall program.  It has been restored to its original WWII markings.</p>
+    <h2>C-124A "Globemaster II"</h2>
+    <p>The Only Surviving C-124A "Globemaster II" Serial Number 49-0258 was assigned to the Strategic Air Command (SAC), the Tactical Air Command (TAC), the Military Air Transport Service (MATS), and the Air Force Reserve (AFRES) during its long career.  To our knowledge, no other type of cargo aircraft served in all 4 of these Commands.  It is the oldest C-124 in the world, and the only remaining "A" model.</p>
+    <h2>F-106A "Delta Dart"</h2>
+    <p>The Only Surviving F-106A "Delta Dart" that was actually stationed at Dover AFB.  300+ F-106's were built for air defense of the US.  The 95th Fighter Interceptor Squadron operated 16 aircraft from Dover AFB from 1963 to 1973, including Serial Number 59-0023.  It was transferred to the NJ Air National Guard in 1973 and retired in 1978 to become one of over 200 flying target drones.  59-0023 is one of six aircraft that survived the program.</p>
+    <h2>C-45</h2>
+    <p>The First C-45 (Beech 18) obtained by the Central Intelligence Agency (CIA).  Used to transport agents in Southeast Asia from 1960 to 1974.  Built in 1943 as an AT-11 Trainer, rebuilt in 1952 as a C-45G.  Turned over to the CIA in 1958 with civilian registration number N7950C</p>
+    <h2>KC-10A "Extender"</h2>
+    <p>The First KC-10A "Extender" built.  Initially owned by McDonnell-Douglas for testing.  The First KC-10A "Extender" to be retired to a museum.</p>
+    <h2>C-119C</h2>
+    <p>The Only Surviving aircraft (C-119C) from the Chosin Reservoir mission in Korea on December 9, 1950.</p>
+    <h2>L-2M "Grasshopper"</h2>
+    <p>The Last aircraft type produced by Taylorcraft was the L-2M "Grasshopper" Trainer, Observation and Liaison aircraft.</p>
 </div>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
