--- a/aircraft.html
+++ b/aircraft.html
@@ -12,7 +12,7 @@
     <link href="css/aircraft.css" rel="stylesheet">
 </head>
 <body>
-<nav th:fragment="navbar" class="navbar bavbar-expand-lg nav-bg mb-2">
+<div>
     <div>
         <h1>PREFACE</h1>
         <p> This guide has been organized and published for the Air Mobility Command Museum Staff and Volunteers. It
@@ -45,15 +45,15 @@
         <h2>History of Dover Air Force Base</h2>
         <h2>Aircraft Assigned to Dover since 1941</h2>
     </div>
-    <div class="container-fluid">
-        <h1>SECTION II</h1>
+    <div class="container">
+            <h1>SECTION II</h1>
         <div>
-            <a href="firstlastonly.html">First, Last and Only</a>
+            <a href="firstlastonly.html"><h2>First, Last and Only</h2></a>
         </div>
         <div>
             <h2>Attack</h2>
-        <img alt="A-10C 'Warthog'" src="Images/A-10C.jpg"/><a class="navbar-brand logo-font" href="/static">Fairchild
-        Republic A-10C "Warthog" 78-0652</a>
+            <img alt="A-10C 'Warthog'" src="Images/A-10C.jpg"/><a class="navbar-brand logo-font" href="/static">Fairchild
+            Republic A-10C "Warthog" 78-0652</a>
             <img alt="A-26C" src="Images/A-26C.jpg"/><a class="navbar-brand logo-font" href="invader.html">Douglas A-26C
             "Invader" 44-35523 (N3428G)</a>
         </div>
@@ -66,11 +66,13 @@
             <h2>Cargo</h2>
             <img alt="C-5A 'Galaxy'" src="Images/C-5A.jpg"/><a class="navbar-brand logo-font" href="galaxy.html">Lockheed
             C-5A "Galaxy" 69-0014</a>
-            <img alt="C-7A" src="Images/C-7A.jpg"/><a class="navbar-brand logo-font" href="/static">DeHavilland Canada C-7A
+            <img alt="C-7A" src="Images/C-7A.jpg"/><a class="navbar-brand logo-font" href="/static">DeHavilland Canada
+            C-7A
             "Caribou" 63-9760</a>
             <img alt="C-9A" src="Images/C-9A.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-9A
             "Nightingale" 67-22584</a>
-            <img alt="C-17" src="Images/C-17.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing C-17 "Globemaster
+            <img alt="C-17" src="Images/C-17.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing C-17
+            "Globemaster
             III"</a>
             <img alt="C-45G" src="Images/C-45G.jpg"/><a class="navbar-brand logo-font" href="/static">Beech C-45G
             "Expeditor"</a>
@@ -117,16 +119,21 @@
         </div>
         <div>
             <h2>Glider</h2>
-            <img alt="CG-4A" src="Images/CG-4A.jpg"/><a class="navbar-brand logo-font" href="/static">Waco CG-4A "Hadrian"
+            <img alt="CG-4A" src="Images/CG-4A.jpg"/><a class="navbar-brand logo-font" href="/static">Waco CG-4A
+            "Hadrian"
             45-15009</a>
-            <img alt="TG-4A" src="Images/TG-4A.jpg"/><a class="navbar-brand logo-font" href="/static">Laister-Kauffman TG-4A
+            <img alt="TG-4A" src="Images/TG-4A.jpg"/><a class="navbar-brand logo-font" href="/static">Laister-Kauffman
+            TG-4A
             "Angel Eyes, Yankee Doodle" 42-53078</a>
         </div>
         <div>
             <h2>Helicopter</h2>
-            <img alt="UH-1H" src="Images/UH-1H.jpg"/><a class="navbar-brand logo-font" href="/static">Bell UH-1H "Iroquois
+            <img alt="UH-1H" src="Images/UH-1H.jpg"/><a class="navbar-brand logo-font" href="/static">Bell UH-1H
+            "Iroquois
             aka Huey" 69-15475</a>
-            <img alt="HH-43B" src="Images/HH-43B.jpg" height="2236" width="1882"/><a class="navbar-brand logo-font" href="/static">Kaman HH-43B "Huskie" 62-4532</a>
+            <img alt="HH-43B" src="Images/HH-43B.jpg" height="2236" width="1882"/><a class="navbar-brand logo-font"
+                                                                                     href="/static">Kaman HH-43B
+            "Huskie" 62-4532</a>
         </div>
         <div>
             <h2>Tanker</h2>
@@ -136,7 +143,9 @@
             79-0433</a>
             <img alt="KC-97L" src="Images/KC-97.jpg"/><a class="navbar-brand logo-font" href="/static">KC-97L
             "Stratofreighter" 53-0230</a>
-            <img alt="KC-135E 'Stratotanker'" src="Images/KC-135E.jpg"/><a class="navbar-brand logo-font" href="tanker.html">Boeing KC-135E "Stratotanker" 57-1507</a>
+            <img alt="KC-135E 'Stratotanker'" src="Images/KC-135E.jpg"/><a class="navbar-brand logo-font"
+                                                                           href="tanker.html">Boeing KC-135E
+            "Stratotanker" 57-1507</a>
         </div>
         <div>
             <h2>Trainer</h2>
@@ -148,12 +157,14 @@
             "Shooting Star" 52-9497</a>
             <img alt="T-37" src="Images/T-37.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna T-37 "Tweet"
             56-576</a>
-            <img alt="T-41" src="Images/T-41.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna T-41 "Mescalero"
+            <img alt="T-41" src="Images/T-41.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna T-41
+            "Mescalero"
             68-7895</a>
         </div>
         <div>
             <h2>Light Cargo/Pass</h2>
-            <img alt="U-3A" src="Images/U-3A.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna U-3A "Blue Canoe"
+            <img alt="U-3A" src="Images/U-3A.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna U-3A "Blue
+            Canoe"
             58-2126</a>
         </div>
         <div>
@@ -163,7 +174,9 @@
         </div>
         <div>
             <h2>Other Equipment/Locations</h2>
-            <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a class="navbar-brand logo-font" href="tower.html">Air Traffic Control Tower</a>
+            <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a class="navbar-brand logo-font"
+                                                                                 href="tower.html">Air Traffic Control
+            Tower</a>
             <img alt="LGM-30" src="Images/LGM-30.JPG"/><a class="navbar-brand logo-font" href="/static">LGM-30 Minuteman
             Missile</a>
             <img alt="M1A1 Howitzer" src="Images/M1A1Howitzer.jpg"/><a class="navbar-brand logo-font" href="/static">Pararack
@@ -192,7 +205,7 @@
         <h3>Commemoration Park</h3>
         <h3>9/11 Memorial</h3>
     </div>
-</nav>
+</div>
 <footer th:fragment="footer" class="footer-bg d-flex justify-content-between align-items-center mt-auto">
 </footer>
 <div th:fragment="boot-scripts">
