added warthog page

--- a/aircraft.html
+++ b/aircraft.html
@@ -52,7 +52,7 @@
         </div>
         <div>
             <h2>Attack</h2>
-            <a class="navbar-brand logo-font" href="/static"><img alt="A-10C 'Warthog'" src="Images/A-10C.jpg"/>Fairchild
+            <a class="navbar-brand logo-font" href="warthog.html"><img alt="A-10C 'Warthog'" src="Images/A-10C.jpg"/>Fairchild
             Republic A-10C "Warthog" 78-0652</a>
             <a class="navbar-brand logo-font" href="invader.html"><img alt="A-26C" src="Images/A-26C.jpg"/>Douglas A-26C
             "Invader" 44-35523 (N3428G)</a>
