updated AMCM page

--- a/flyingfortress.html
+++ b/flyingfortress.html
@@ -23,141 +23,142 @@
 <p>The B-17G, Tail Number 44-83624, was manufactured by Douglas Aircraft, Long Beach, California to the United States Army Air Force on 26 April 1945.</p>
 <table>
     <tr>
-        <th>-         Year    -</th>
-        <th>-         Month And Day     -</th>
+        <th>Year</th>
+        <th>Month And Day</th>
         <th>Record</th>
     </tr>
     <tr>
-        <th>1945</th>
-        <th>April</th>
-        <th>To 4100th Base Unit, Patterson Field, Ohio</th>
+        <td>1945</td>
+        <td>April</td>
+        <td>To 4100th Base Unit, Patterson Field, Ohio</td>
     </tr>
     <tr>
-        <th></th>
-        <th>May</th>
-        <th>To 532nd BS/381st BG, Royal Air Force Ridgewell, UK</th>
+        <td></td>
+        <td>May</td>
+        <td>To 532nd BS/381st BG, Royal Air Force Ridgewell, UK</td>
     </tr>
     <tr>
-        <th></th>
-        <th>October</th>
-        <th>Declared excess</th>
+        <td></td>
+        <td>October</td>
+        <td>Declared excess</td>
     </tr>
     <tr>
-        <th></th>
-        <th>05 November</th>
-        <th>Returned to military use</th>
+        <td></td>
+        <td>05 November</td>
+        <td>Returned to military use</td>
     </tr>
     <tr>
-        <th></th>
-        <th>07 November</th>
-        <th>To 4168th Base Unit, South Plains Field, Texas</th>
+        <td></td>
+        <td>07 November</td>
+        <td>To 4168th Base Unit, South Plains Field, Texas</td>
     </tr>
     <tr>
-        <th>1947</th>
-        <th>July</th>
-        <th>To 4141st Base Unit, Pyote2 Field, Texas</th>
+        <td>1947</td>
+        <td>July</td>
+        <td>To 4141st Base Unit, Pyote2 Field, Texas</td>
     </tr>
     <tr>
-        <th>1948</th>
-        <th>January</th>
-        <th>To 4112th Base Unit, Olmstead Air Force Base, Pennsylvania</th>
+        <td>1948</td>
+        <td>January</td>
+        <td>To 4112th Base Unit, Olmstead Air Force Base, Pennsylvania</td>
     </tr>
     <tr>
-        <th></th>
-        <th>02 February</th>
-        <th>Redesignated MB-17G</th>
+        <td></td>
+        <td>02 February</td>
+        <td>Redesignated MB-17G</td>
     </tr>
     <tr>
-        <th></th>
-        <th>15 February</th>
-        <th>To 605th Base Unit, Eglin Air Force Base, Florida</th>
+        <td></td>
+        <td>15 February</td>
+        <td>To 605th Base Unit, Eglin Air Force Base, Florida</td>
     </tr>
     <tr>
-        <th></th>
-        <th>16 February</th>
-        <th>To 1st Experimental Guided Missile Group (Air Proving Ground Command), Eglin Air Force Base, Florida</th>
+        <td></td>
+        <td>16 February</td>
+        <td>To 1st Experimental Guided Missile Group (Air Proving Ground Command), Eglin Air Force Base, Florida</td>
     </tr>
     <tr>
-        <th>1949</th>
-        <th>March</th>
-        <th>To 3200th Proof Test Group (APGC), Eglin Air Force Base, Florida</th>
+        <td>1949</td>
+        <td>March</td>
+        <td>To 3200th Proof Test Group (APGC), Eglin Air Force Base, Florida</td>
     </tr>
     <tr>
-        <th></th>
-        <th>November</th>
-        <th>Redesignated TB-17G</th>
+        <td></td>
+        <td>November</td>
+        <td>Redesignated TB-17G</td>
     </tr>
     <tr>
-        <th>1950</th>
-        <th>January</th>
-        <th>To 550th Guided Missile Wing (APGC), Eglin, Florida</th>
+        <td>1950</td>
+        <td>January</td>
+        <td>To 550th Guided Missile Wing (APGC), Eglin, Florida</td>
     </tr>
     <tr>
-        <th></th>
-        <th>June</th>
-        <th>To 3200th Proof Test Group (APGC), Eglin Air Force Base, Florida</th>
+        <td></td>
+        <td>June</td>
+        <td>To 3200th Proof Test Group (APGC), Eglin Air Force Base, Florida</td>
     </tr>
     <tr>
-        <th>1951</th>
-        <th>February</th>
-        <th>To 3201st Air Base Group (APGC), Eglin Air Force Base, Florida</th>
+        <td>1951</td>
+        <td>February</td>
+        <td>To 3201st Air Base Group (APGC), Eglin Air Force Base, Florida</td>
     </tr>
     <tr>
-        <th></th>
-        <th>01 June</th>
-        <th>To 3200th Proof Test Group (APGC), Eglin Air Force Base, Florida</th>
+        <td></td>
+        <td>01 June</td>
+        <td>To 3200th Proof Test Group (APGC), Eglin Air Force Base, Florida</td>
     </tr>
     <tr>
-        <th>1953</th>
-        <th>22 June</th>
-        <th>To 3205th Drone Group (APGC), Eglin Air Force Base, Florida</th>
+        <td>1953</td>
+        <td>22 June</td>
+        <td>To 3205th Drone Group (APGC), Eglin Air Force Base, Florida</td>
     </tr>
     <tr>
-        <th></th>
-        <th>November</th>
-        <th>To 3560th Pilot Training Training Wing (Air Training Command), Webb Air Force Base, Texas</th>
+        <td></td>
+        <td>November</td>
+        <td>To 3560th Pilot Training Training Wing (Air Training Command), Webb Air Force Base, Texas</td>
     </tr>
     <tr>
-        <th></th>
-        <th>December</th>
-        <th>To 3205th Drone Group (APGC), Eglin Air Force Base, Florida</th>
+        <td></td>
+        <td>December</td>
+        <td>To 3205th Drone Group (APGC), Eglin Air Force Base, Florida</td>
     </tr>
     <tr>
-        <th>1955</th>
-        <th>04 April</th>
-        <th>To Ogden Air Material Area, Hill Air Force Base, Utah</th>
+        <td>1955</td>
+        <td>04 April</td>
+        <td>To Ogden Air Material Area, Hill Air Force Base, Utah</td>
     </tr>
     <tr>
-        <th></th>
-        <th>11 April</th>
-        <th>To Middletown Air Material Area, Olmstead Air Force Base, Pennsylvania</th>
+        <td></td>
+        <td>11 April</td>
+        <td>To Middletown Air Material Area, Olmstead Air Force Base, Pennsylvania</td>
     </tr>
     <tr>
-        <th></th>
-        <th>01 June</th>
-        <th>Redesignated DB-17G</th>
+        <td></td>
+        <td>01 June</td>
+        <td>Redesignated DB-17G</td>
     </tr>
     <tr>
-        <th></th>
-        <th>07 June</th>
-        <th>To 3205th Drone Group (APGC), Eglin Air Force Base, Florida</th>
+        <td></td>
+        <td>07 June</td>
+        <td>To 3205th Drone Group (APGC), Eglin Air Force Base, Florida</td>
     </tr>
     <tr>
-        <th>1957</th>
-        <th>June</th>
-        <th>Droppe from the USAF inventory by transfer to USAF Museum in Wright-Patterson Air Force Base, Ohio</th>
+        <td>1957</td>
+        <td>June</td>
+        <td>Droppe from the USAF inventory by transfer to USAF Museum in Wright-Patterson Air Force Base, Ohio</td>
     </tr>
     <tr>
-        <th>1989</th>
-        <th>July</th>
-        <th>Transferred to Dover Air Force Base Museum for display</th>
+        <td>1989</td>
+        <td>July</td>
+        <td>Transferred to Dover Air Force Base Museum for display</td>
     </tr>
     <tr>
-        <th>1995</th>
-        <th>September</th>
-        <th>Painted in 381st Bomb Group markings.  Gil Cohen paints "Sleepy Time Gal" nose art.</th>
+        <td>1995</td>
+        <td>September</td>
+        <td>Painted in 381st Bomb Group markings.  Gil Cohen paints "Sleepy Time Gal" nose art.</td>
     </tr>
 </table>
+<a href="#top" class="btn btn-primary">Back to Top</a>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
