--- a/invader.html
+++ b/invader.html
@@ -18,8 +18,78 @@
     <p>3. Transferred from Bonanzaville Air Museum in East Fargo, North Dakota.  When the NMUSAF instituted a program requiring civilian museums to pay for liability insurance on display aircraft, they turned it back into the system.</p>
     <p>4. Disassembled and moved to Omaha by Worldwide Aircraft Flew to Dover on a C-17 training mission.</p>
     <p>5. Painted in the generic markings of an A-26 assigned to Dover AAF at the 4146th Rocket Test Center.</p>
-    <a href="#top" class="btn btn-primary">Back to Top</a>
+    <h2>History</h2>
+    <table>
+
+    </table>
+    <h2>Specifications</h2>
+    <table>
+        <tr>
+            <th>Specification</th>
+            <th>Value</th>
+        </tr>
+        <tr>
+            <td>Length:</td>
+            <td>50 feet</td>
+        </tr>
+        <tr>
+            <td>Wingspan:</td>
+            <td>70 feet</td>
+        </tr>
+        <tr>
+            <td>Wing Area:</td>
+            <td>540 square feet</td>
+        </tr>
+        <tr>
+            <td>Height:</td>
+            <td>18 feet 3 inches</td>
+        </tr>
+        <tr>
+            <td>Empty Weight:</td>
+            <td>22,850 lbs.</td>
+        </tr>
+        <tr>
+            <td>Loaded Weight:</td>
+            <td>27,600 lbs.</td>
+        </tr>
+        <tr>
+            <td>Crew:</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Engines:</td>
+            <td>2 - Pratt & Whitney R-2800 "Double Wasp" radial engines</td>
+        </tr>
+        <tr>
+            <td>Cost:</td>
+            <td>$242,595.00</td>
+        </tr>
+        <tr>
+            <td>Armament:</td>
+            <td>Varies with model - includes machine guns/rockets/bombs</td>
+        </tr>
+    </table>
+    <h2>Performanmce</h2>
+    <table>
+        <tr>
+            <th>Performance</th>
+            <th>Value</th>
+        </tr>
+        <tr>
+            <td>Max Speed:</td>
+            <td>355 miles per hour</td>
+        </tr>
+        <tr>
+            <td>Range:</td>
+            <td>1,400 miles</td>
+        </tr>
+        <tr>
+            <td>Ceiling:</td>
+            <td>22,000 feet</td>
+        </tr>
+    </table>
 </div>
+<a href="#top" class="btn btn-primary">Back to Top</a>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
