--- a/warthog.html
+++ b/warthog.html
@@ -7,14 +7,121 @@
     <title>A-10C "Thunderbolt II aka Warthog" Tail Number 79-0088</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!--  <link href="New_Website.css/index.New_Website.css" rel="stylesheet">-->
+    <link href="css/warthog.css" rel="stylesheet">
 </head>
 <body>
-<h1>Significan Facts</h1>
-<p>The A-10C is a fixed-wing, multi-engine, single seat, sub-sonic attack aircraft.  It was designed for close air support for ground combat troops.  The A-10 first flew on May 10, 1972, and was built from 1972 to 1984.  Out of a total of 716 manufactured, 79-0088 is number 352, and was manufactured in 1979.</p>
+<h1 id="top">Significant Facts</h1>
+<p>The A-10C is a fixed-wing, multi-engine, single seat, sub-sonic attack aircraft. It was designed for close air
+    support for ground combat troops. The A-10 first flew on May 10, 1972, and was built from 1972 to 1984. Out of a
+    total of 716 manufactured, 79-0088 is number 352, and was manufactured in 1979.</p>
 <h2>History:</h2>
+<table>
+    <tr>
+        <th>Date</th>
+        <th>Record</th>
+    </tr>
+    <tr>
+        <td>1979</td>
+        <td>Entered active service</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Assigned to 104th Tactical Fighter Squadron, 175th Tactical Fighter Group, Maryland Air National Guard</td>
+    </tr>
+    <tr>
+        <td>May 1988</td>
+        <td>At Royal Air Force Bentwaters, UK</td>
+    </tr>
+    <tr>
+        <td>June 2008</td>
+        <td>On loan to Eglin Air Force Base, Florida 46th Test Wing for 3-D measurement to help improve close air
+            support smart weapons technology
+        </td>
+    </tr>
+    <tr>
+        <td>March 2021</td>
+        <td>Participated in Combat Hammer exercise at Hill Air Force Base, Utah</td>
+    </tr>
+    <tr>
+        <td>May 2022</td>
+        <td>Participated in Swift Response Exercise in Europe</td>
+    </tr>
+    <tr>
+        <td>2025</td>
+        <td>Retired from service and transferred to the Air Mobility Command Museum</td>
+    </tr>
+</table>
 <h2>Specifications:</h2>
+<table>
+    <tr>
+        <th>Title</th>
+        <th>Specification</th>
+    </tr>
+    <tr>
+        <td>Length:</td>
+        <td>53 feet 4 inches</td>
+    </tr>
+    <tr>
+        <td>Wingspan:</td>
+        <td>57 feet 6 inches</td>
+    </tr>
+    <tr>
+        <td>Wing Area:</td>
+        <td>506 square feet</td>
+    </tr>
+    <tr>
+        <td>Height:</td>
+        <td>14 feet 8 inches</td>
+    </tr>
+    <tr>
+        <td>Crew:</td>
+        <td>One</td>
+    </tr>
+    <tr>
+        <td>Engines:</td>
+        <td>2 GE TF-34-GE-100A Turbofans, 9,065 lbs. thrust (each)</td>
+    </tr>
+    <tr>
+        <td>Weight:</td>
+        <td>24,959 lbs. (empty)</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>30,384 lbs. (gross)</td>
+    </tr>
+    <tr>
+        <td>Armament:</td>
+        <td>1 GAU-8/A "Avenger" autocannon, 6 x AGM-65 "Maverick" air-to-surface missiles, 2 x AIM-9 "Sidewinder" air-to-air missiles</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Provisions for MK80, Paveway, JDAM and CBU series munitions.  Can also carry ECM and targeting pods.</td>
+    </tr>
+</table>
 <h2>Performance:</h2>
+<table>
+    <tr>
+        <th>Title</th>
+        <th>Specification</th>
+    </tr>
+    <tr>
+        <td>Max Speed:</td>
+        <td>439 miles per hour at sea level</td>
+    </tr>
+    <tr>
+        <td>Cruise Speed:</td>
+        <td>340 miles per hour</td>
+    </tr>
+    <tr>
+        <td>Combat Range:</td>
+        <td>290 miles</td>
+    </tr>
+    <tr>
+        <td>Service Ceiling:</td>
+        <td>45,000 feet</td>
+    </tr>
+</table>
+<a href="#top" class="btn btn-primary">Back to Top</a>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
