updated AMCM page

--- a/invader.html
+++ b/invader.html
@@ -20,7 +20,50 @@
     <p>5. Painted in the generic markings of an A-26 assigned to Dover AAF at the 4146th Rocket Test Center.</p>
     <h2>History</h2>
     <table>
-
+        <tr>
+            <th>Date</th>
+            <th>Event</th>
+        </tr>
+        <tr>
+            <td>10 May 1945</td>
+            <td>Manufactured by Douglas Aircraft, Tulsa, Oklahoma and delivered to the US Army Air Force</td>
+        </tr>
+        <tr>
+            <td>May 1945</td>
+            <td>To 140th Army Air Force Base Unit (Air Training Command) Moody Army Air Force, Georgia</td>
+        </tr>
+        <tr>
+            <td>October 1945</td>
+            <td>To 138th Army Air Force Base Unit (Continental Air Force) Lake Charles Army Air Field, Louisiana (assigned to 47th Bombardment [Medium] Group)</td>
+        </tr>
+        <tr>
+            <td>March 1946</td>
+            <td>To 307th Army Air Force Base Unit (Tactical Air Command) Lake Charles Army Air Field, Louisiana</td>
+        </tr>
+        <tr>
+            <td>May 1946</td>
+            <td>To 4160th Air Force Base Unit (Air Material Command), Hill Air Force Base, Utah (storage to RB-2gC)</td>
+        </tr>
+        <tr>
+            <td>April 1952</td>
+            <td>To 363rd Tactical Reconnaissance Wing (TAC), Shaw Air Force Base, South Carolina</td>
+        </tr>
+        <tr>
+            <td>April 1954</td>
+            <td>To 432nd Tactical Reconnaissance Group (TAC), Shaw Air Force Base, South Carolina</td>
+        </tr>
+        <tr>
+            <td>May 1956</td>
+            <td>To 183rd Tactical Reconnaissance (Night Photograph) Squadron (Air National Guard), Hawkins Field, Jackson, Mississippi</td>
+        </tr>
+        <tr>
+            <td>March 1958</td>
+            <td>To Arizona Aircraft Storage Branch (Air Mobility Command), Davis-Monthan Air Force Base, Arizona</td>
+        </tr>
+        <tr>
+            <td>August 2008</td>
+            <td>Arrived at the Air Mobility Command Museum for restoration</td>
+        </tr>
     </table>
     <h2>Specifications</h2>
     <table>
