--- a/flyingfortress.html
+++ b/flyingfortress.html
@@ -7,12 +7,13 @@
     <title>Boeing B-17G Flying Fortress</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link href="css/flyingfortress.css" rel="stylesheet">
+    <link href="css/flyingfortress.css" rel="stylesheet">
 </head>
 <body>
 <h1 id="top">B-17G Flying Fortress</h1>
 <h2>Significant Facts</h2>
-<p>1. This aircraft was the last B-17 assigned to the 381st Bomb Group at RAF Ridgewell, UK.  It arrived in May 1945 but did not see combat.</p>
+<p>1. This aircraft was the last B-17 assigned to the 381st Bomb Group at RAF Ridgewell, UK. It arrived in May 1945 but
+    did not see combat.</p>
 <p>2. Used in secret "Flying Bomb" tests in 1948.</p>
 <p>3. One of the last B-17's in USAF service.</p>
 <p>4. Last B-17 to drop bombs - used during airpower demonstrations.</p>
@@ -20,7 +21,9 @@
 <p>6. The aircraft is painted as "Sleep Time Gal" 42-107112, another B-17 assigned to the 381st BG.</p>
 <p>7. Nose-art was painted in 1995 by noted aviation artist Gil Cohen.</p>
 <h2>Assignment Record Highlights Of B-17G, Tail Number 44-83624</h2>
-<p>The B-17G, Tail Number 44-83624, was manufactured by Douglas Aircraft, Long Beach, California to the United States Army Air Force on 26 April 1945.</p>
+<p>The B-17G, Tail Number 44-83624, was manufactured by Douglas Aircraft, Long Beach, California to the United States
+    Army Air Force on 26 April 1945.</p>
+<h2>History</h2>
 <table>
     <tr>
         <th>Year</th>
@@ -155,9 +158,73 @@
     <tr>
         <td>1995</td>
         <td>September</td>
-        <td>Painted in 381st Bomb Group markings.  Gil Cohen paints "Sleepy Time Gal" nose art.</td>
+        <td>Painted in 381st Bomb Group markings. Gil Cohen paints "Sleepy Time Gal" nose art.</td>
     </tr>
 </table>
+<p>The Flying Fortress is one of the most famous airplanes ever built.  The B-17 prototype first flew on July 28, 1935.  Few B-17's were in service on December 7, 1941, but production quickly accelerated.  The aircraft served in every WW II combat zone, but is best known for daylight strategic bombing of German industrial targets.  Production ended in May, 1945 and totaled 12,726.</p>
+<h2>Specifications</h2>
+<table>
+    <tr>
+        <th>Specification</th>
+        <th>Value</th>
+    </tr>
+    <tr>
+        <td>Wing Span:</td>
+        <td>103 feet 10 inches</td>
+    </tr>
+    <tr>
+        <td>Length:</td>
+        <td>74 feet 4 inches</td>
+    </tr>
+    <tr>
+        <td>Height:</td>
+        <td>19 feet 1 inch</td>
+    </tr>
+    <tr>
+        <td>Weight:</td>
+        <td>55,000 lbs. loaded</td>
+    </tr>
+    <tr>
+        <td>Armament:</td>
+        <td>Thirteen .50-caliber machine guns with normal bomb load of 6,000 lbs.</td>
+    </tr>
+    <tr>
+        <td>Engines:</td>
+        <td>Four Wright "Cyclone" R-1820's with 1,200 horse power each.</td>
+    </tr>
+    <tr>
+        <td>Cost:</td>
+        <td>$276,000.00</td>
+    </tr>
+</table>
+<h2>Performance</h2>
+<table>
+    <tr>
+        <th>Specification</th>
+        <th>Value</th>
+    </tr>
+    <tr>
+        <td>Maximum Speed:</td>
+        <td>300 miles per hour</td>
+    </tr>
+    <tr>
+        <td>Cruising Speed:</td>
+        <td>170 miles per hour</td>
+    </tr>
+    <tr>
+        <td>Range:</td>
+        <td>1,850 miles</td>
+    </tr>
+    <tr>
+        <td>Service Ceiling:</td>
+        <td>35,000 feet</td>
+    </tr>
+</table>
+<p>The museum acquired 44-83624 in 1989.  44-83624 had no combat history of its own.  A seven year restoration project was begun to display the aircraft as a tribute to the 381st Bomb Group's 532nd Squadron's "Sleepy Time Gal", 42-107112.  "Sleepy Time Gal" was a veteran of 47 missions, including strategic bombing of Berlin, Essen, Bremen and Schweinfurt, and ground support missions in Normandy.  The war in Europe ended in May 1945.  "Sleepy Time Gal" returned to the United States on May 29, 1945.  The 381st was inactivated on August 28, 1945.  "Sleepy Time Gal", 42-107112 was sold for scrap on November 18, 1945.</p>
+<h1>Sleepy Time Gal</h1>
+<h2>A short history of the AMC Museum's B-17G Flying Fortress</h2>
+<h3>By: Patrick O'Neill</h3>
+<p></p>
 <a href="#top" class="btn btn-primary">Back to Top</a>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
