updated AMCM page

--- a/flyingfortress.html
+++ b/flyingfortress.html
@@ -224,7 +224,7 @@
 <h1>Sleepy Time Gal</h1>
 <h2>A short history of the AMC Museum's B-17G Flying Fortress</h2>
 <h3>By: Patrick O'Neill</h3>
-<p></p>
+<p>Walking into the Air Mobility Command Museum's main indoor gallery, one stands in awe before two great World War Two era aircraft at the gallery's center stage.  One of these is a B-17G Flying Fortress.  The aircraft is marked to represent a World War Two combat veteran of the 381st Bomb Group named "Sleepy Time Gal", serial #42-107112.  However, contrasting to how it was painted, the actual B-17G sitting in the museum is #44-83624.  Though her story is very different from that of "Sleepy Time Gal's", at one point in history, their paths almost crossed.  Thus, if accidentally, #44-83624 is almost one of the best aircraft to represent that particular aerial combat veteran.</p>
 <a href="#top" class="btn btn-primary">Back to Top</a>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
