updated AMCM page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h3 class="skills-title" id="skills">SKILLS AND ABILITIES</h3>
                 <!--Skills come in from variables on functions page-->
                 <section>
-                    <div class="container skills-container">
+                    <div class="skills-container">
                         <div>
                             <div>
                                 <ul id="skills-list1" class="skills"></ul>
@@ -71,6 +71,9 @@
                             </div>
                             <div>
                                 <ul id="skills-list3" class="skills"></ul>
+                            </div>
+                            <div>
+                                <ul id="skills-list4" class="skills"></ul>
                             </div>
                         </div>
                     </div>
